--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
     background-color: black;
     color: white;
 }
+
+div {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: rgb(255, 140, 0);
+    text-align: center;
+}
