--- a/style.css
+++ b/style.css
@@ -3,11 +3,21 @@ body {
     color: white;
 }
 
-div {
+h1 {
+    text-align: center;
+}
+
+.ball {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100px;
     width: 100px;
     border-radius: 50%;
     background-color: rgb(255, 140, 0);
     text-align: center;
     margin: auto;
+    font-size: 22px;
+    font-weight: bold;
+    align-items: center;
 }
